<resources>
    <string name="app_name">SWiM_TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TODO Manager</string>
    <string name="nav_header_subtitle">08255 Nowak Marcin 7ION</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_addtask">Add task</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_tasklist">Task list</string>
    <string name="menu_edittask">Edit task</string>

    <string name="addtask_button">Add</string>
    <string name="addtask_task_hint">Task name</string>
    <string name="addtask_task_text"></string>
    <string name="addtask_tags_hint">[tag1][tag2]</string>
    <string name="addtask_tags_text"></string>
    <string name="addtask_isdone_checkbox">Done</string>

    <string name="calendar_text">Tasks overdue at specified date</string>

    <string name="tasklist_text">Registered tasks</string>

    <string name="edittask_text">Task name</string>
    <string name="edittask_tags">Task name</string>
    <string name="edittask_checkbox_done">Done</string>
    <string name="edittask_button_edit">Save edit</string>
    <string name="edittask_button_delete">Delete task</string>



</resources>