<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addtask.AddTaskFragment">

    <AutoCompleteTextView
        android:id="@+id/addtasktext"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/addtask_task_hint"
        android:text="@string/addtask_task_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <MultiAutoCompleteTextView
        android:id="@+id/addtasktags"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/addtask_tags_hint"
        android:text="@string/addtask_tags_text"
        app:layout_constraintStart_toStartOf="@+id/addtasktext"
        app:layout_constraintTop_toBottomOf="@+id/addtasktext" />

    <Spinner
        android:id="@+id/addtaskprioritySpinner"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/fab_margin"
        android:entries="@array/priority_array"
        app:layout_constraintStart_toStartOf="@+id/addtasktext"
        app:layout_constraintTop_toBottomOf="@+id/addtasktags" />

    <CheckBox
        android:id="@+id/addTaskIsDoneCheckbox"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/addtask_isdone_checkbox"
        app:layout_constraintStart_toStartOf="@+id/addtasktext"
        app:layout_constraintTop_toBottomOf="@+id/addtaskprioritySpinner" />

    <CalendarView
        android:id="@+id/addtaskduedate"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@+id/addtaskbutton"
        app:layout_constraintStart_toStartOf="@+id/addtasktext" />

    <Button
        android:id="@+id/addtaskbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/addtask_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addtasktext" />

</androidx.constraintlayout.widget.ConstraintLayout>